--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -1,19 +1,21 @@
+{% load static %}
 <!-- Navbar Start -->
 <div class="container-fluid nav-bar p-0">
     <div class="contain-lg p-0">
-        <nav class="navbar navbar-expand-lg bg-secondary navbar-light">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-light">
             <a href="index.html" class="navbar-brand">
-                <img src="{static, 'img/logo.png'}" alt="">
+                <!-- <img src="{% static 'img/logo.png' %}" alt="" height=""> -->
+                <i class="bi bi-camera-fill" style="color: blue;"></i><span class="text-white"> PICZONE</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                 <div class="navbar-nav ml-auto py-0">
-                    <a href="#" class="nav-item nav-link">HOME</a>
-                    <a href="" class="nav-item nav-link">GALLERY</a>
+                    <a href="#" class="nav-item nav-link text-white">HOME</a>
+                    <a href="" class="nav-item nav-link text-white">GALLERY</a>
                     <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           CATEGORIES
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -29,7 +31,7 @@
                         </div>
                       </div>
                     <div class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           LOCATIONS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -40,12 +42,12 @@
                           <a class="dropdown-item" href="#">Africa</a>
                         </div>
                     </div>
-                    <a href="" class="nav-item nav-link">CONTACT</a>
+                    <a href="" class="nav-item nav-link text-white">CONTACT</a>
                 </div>
             </div>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
             </form>
         </nav>
     </div>
