optimized landing page styles

--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -1,8 +1,8 @@
 {% load static %}
 <!-- Navbar Start -->
-<div class="container-fluid nav-bar p-0">
-    <div class="contain-lg p-0">
-        <nav class="navbar navbar-expand-lg bg-dark navbar-light">
+<div class="container-fluid nav-bar p-0 home">
+    <div class="container-lg p-0">
+        <nav class="navbar navbar-expand-lg navbar-light">
             <a href="index.html" class="navbar-brand">
                 <!-- <img src="{% static 'img/logo.png' %}" alt="" height=""> -->
                 <i class="bi bi-camera-fill" style="color: blue;"></i><span class="text-white"> PICZONE</span>
@@ -45,10 +45,7 @@
                     <a href="" class="nav-item nav-link text-white">CONTACT</a>
                 </div>
             </div>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
-            </form>
+            
         </nav>
     </div>
 </div>
