--- a/gallery/templates/gallery/index.html
+++ b/gallery/templates/gallery/index.html
@@ -1,6 +1,26 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
+{{block.super}}
 
+<div class="banner">
+    <div class="cover">
+        <div class="container hold">
+            <div class="card welcome">
+                <i class="bi bi-camera" style="font-size: 40px;"></i>
+                <h2>PICZONE GALLERY</h2>
+                <br>
+                <h5>If you are looking to explore the world, don't hold back. Welcome to my gallery, I travelled the world and I still am. I'm not done. Join me for adventures.</h3>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+                </form>
+                <button class="btn explore"><a  class="text-white" href="#gallery">EXPLORE GALLERY</a></button>
+            </div>
+            
+        </div>
+    </div>
+</div>
 
 {% endblock %}
