--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,16 +1,40 @@
 * {
     font-family: 'Raleway' sans-serif;
 }
-body{
+.home{
+    background-color: rgba(0, 0, 0, 0.192);
+}
+.overlay{
     scroll-behavior: smooth;
-    background-image: url(/static/img/bg.jpg);
+    background-image: url(/static/img/bgi.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    height: 75vh;
 }
-.overlay {
-    margin: 0;
-    padding: 0;
-    background-color: rgba(49, 83, 15, 0.3);
+
+.hold {
+    margin-top: 5%;
+  
+}
+.welcome{
+    width: 60%;
+    margin: auto;
+    border-radius: 0;
+    color: white;
+    background-color: black;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    
+}
+button.explore {
+    background-color: rgb(255, 196, 0);
+    border-radius: 0;
+    margin-top: 3%;
+    margin-bottom: 3%;
+  
 }
