added content  to display pics,created single view

--- a/gallery/templates/gallery/index.html
+++ b/gallery/templates/gallery/index.html
@@ -23,4 +23,68 @@
     </div>
 </div>
 
+<div class="container wrap">
+    <div class="row" id="gallery">
+        {% for image in images %}
+        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-3">
+            <div class="portfolio-wrap">
+                <div class="portfolio-wrap hover">
+                    <a class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width: 100%;">
+                        <img src="{{image.picture.cdn_url}}" alt="" class="image">
+                        <div class="overlayed">
+                            <h4>{{image.name}}</h4>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    {% empty %}
+    </div>
+    <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <img src="{% static 'img/oops.png' %}" alt="" class="oops">
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+            <h2 class="text-center">Sorry, we cannot seem to find images !!</h2>
+        </div>
+    </div>
+    {% endfor %}
+
+    <!-- Image details  -->
+    {% for image in images %}
+    <div class="modal fade" id="{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Image</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-md-9 col-lg-9">
+                        <a href="{% url 'single' category_name=image.image_category.name image_id=image.id %}"><img src="{{image.picture.cdn_url}}" alt="" id="img{{image.id}}" class="img-thumbnail" style="cursor: pointer;"></a>
+                    </div>
+                    <div class="col-md-3">
+                        <h4 class="desc">Location</h4>
+                        <p>{{image.image_location}}</p>
+                        <h4 class="desc">Category</h4>
+                        <p>{{image.image_category.name}}</p>
+                    </div>
+                    <div>
+                        <h2 class="desc">{{image.name}}</h2>
+                        <p class="desc">{{image.description}}</p>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button class="btn btn-warning" type="button" onclick="copy('img{{image.id}}')">Copy Link</button>
+                <button class="btn btn-warning" type="button" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+</div>
+
 {% endblock %}
