created a view for  image location

--- a/gallery/templates/gallery/index.html
+++ b/gallery/templates/gallery/index.html
@@ -30,7 +30,7 @@
             <div class="portfolio-wrap">
                 <div class="portfolio-wrap hover">
                     <a class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width: 100%;">
-                        <img src="{{image.picture.cdn_url}}" alt="" class="image">
+                        <img src="{{image.pic_url}}" alt="" class="image">
                         <div class="overlayed">
                             <h4>{{image.name}}</h4>
                         </div>
