created an image location template

--- a/gallery/templates/gallery/index.html
+++ b/gallery/templates/gallery/index.html
@@ -63,7 +63,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-md-9 col-lg-9">
-                        <a href="{% url 'single' category_name=image.image_category.name image_id=image.id %}"><img src="{{image.picture.cdn_url}}" alt="" id="img{{image.id}}" class="img-thumbnail" style="cursor: pointer;"></a>
+                        <a href="{% url 'single' category_name=image.image_category.name image_id=image.id %}"><img src="{{image.pic_url}}" alt="" id="img{{image.id}}" class="img-thumbnail" style="cursor: pointer;"></a>
                     </div>
                     <div class="col-md-3">
                         <h4 class="desc">Location</h4>
