--- a/gallery/templates/single.html
+++ b/gallery/templates/single.html
@@ -64,7 +64,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-6 col-lg-6">
-            <img src="" alt="">
+            <img src="{% static 'img/oops.png' %}" alt="" class="oops">
         </div>
         <div class="col-sm-6 col-md-6 col-lg-6">
             <h2 class="text-center">Seems we cannot find any related images!!</h2>
