--- a/gallery/templates/location.html
+++ b/gallery/templates/location.html
@@ -27,7 +27,7 @@
             <div class="portfolio-wrap">
                 <div class="portfolio-wrap hover">
                     <a href="" class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width: 100%;">
-                        <img src="{{image.pic_url}}" class="image" alt="">
+                        <img src="{{image.pic.url}}" class="image" alt="">
                         <div class="overlayed">
                             <h4>
                                 {{image.name}}
