--- a/gallery/templates/single.html
+++ b/gallery/templates/single.html
@@ -25,7 +25,7 @@
         <div class="col-md-8">
             <div class="portfolio-wrap">
                 <a data-toggle="modal" data-target="#{{image.id}}" class="img-overlay" style="width: 100%;">
-                    <img src="{{image.pic_url}}" class="image" alt="">
+                    <img src="{{image.pic.url}}" class="image" alt="">
                 </a>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <div class="portfolio-wrap">
                 <div class="portfolio-wrap hover">
                     <a href="" class="img-overlay" data-toggle="modal" data-target="#{{image.id}}" style="width: 100%;">
-                        <img src="{{image.pic_url}}" class="image" alt="">
+                        <img src="{{image.pic.url}}" class="image" alt="">
                         <div class="overlayed">
                             <h4>
                                 <a href="/img/{{image.image_category.name}}/{{image.id}}">
