--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -52,3 +52,92 @@ button.explore {
     padding-top: 40px;
     color: #c3c3c3;
 }
+.container.wrap {
+    margin-top: 8em;
+}
+.image {
+    width: 100%;
+}
+.hover {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+}
+ /* .hover .overlayed {
+    position: absolute;
+    overflow: hidden;
+    width: 80%;
+    height: 80%;
+    left: 10%;
+    top: 10%;
+    border-bottom: 1px solid #FFF;
+    border-top: 1px solid #FFF;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: scale(0,1);
+    -ms-transform: scale(0,1);
+    transform: scale(0,1);
+} */
+
+.hover:hover .overlayed {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+}
+
+.hover:hover img {
+    filter: brightness(0.1);
+    -webkit-filter: brightness(0.1);
+    -moz-filter: brightness(0.1);
+    -o-filter: brightness(0.1);
+    -ms-filter: brightness(0.1);
+}
+.portfolio-wrap {
+    padding: 0 4px;
+}
+
+h2,p.desc {
+    padding-left: 25px;
+    padding-top: 10px;
+}
+
+.hover h4 {
+	text-transform: uppercase;
+    text-align: center;
+    position: relative;
+    font-size: 15px;
+    background-color: transparent;
+    color: #ffffff;
+    /* margin-top: 2em; */
+    padding: 2em 2em;
+    opacity: 1;
+    filter: alpha(opacity=0);
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(0,-100%,0);
+    transform: translate3d(0,-100%,0);
+    letter-spacing: 2px;
+}
+/*
+.hover p{
+	color: #FFF;
+    line-height: 1.8em;
+	opacity: 0;
+	filter: alpha(opacity=0);
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(0,100%,0);
+	transform: translate3d(0,100%,0);
+}
+
+ */
+.modal.fade {
+    width: 50%; 
+    margin:auto;
+    height: 70vh;
+    background-color: rgb(255, 255, 255);
+}
