--- a/gallery/templates/location.html
+++ b/gallery/templates/location.html
@@ -10,7 +10,7 @@
         <div class="container imageloc">
             <i class="bi bi-camera" style="font-size: 40px;"></i>
             <h2>PICZONE GALLERY</h2>
-            <form class="form-inline my-2 my-lg-0" role="search" action="">
+            <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_image' %}">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-warning my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
             </form>
