--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -3,7 +3,7 @@
 <div class="container-fluid nav-bar p-0 home">
     <div class="container-lg p-0">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a href="index.html" class="navbar-brand">
+            <a href="#" class="navbar-brand">
                 <!-- <img src="{% static 'img/logo.png' %}" alt="" height=""> -->
                 <i class="bi bi-camera-fill" style="color: blue;"></i><span class="text-white"> PICZONE</span>
             </a>
