fixing search functionality

--- a/gallery/templates/gallery/index.html
+++ b/gallery/templates/gallery/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-warning" type="button" onclick="copy('img{{image.id}}')">Copy Link</button>
+                <button class="btn btn-warning" type="button" onclick="copy('img{{image.id}}')" style="cursor: pointer;">Copy Link</button>
                 <button class="btn btn-warning" type="button" data-dismiss="modal" style="cursor: pointer;">Close</button>
             </div>
         </div>
