--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -23,26 +23,31 @@
         {% include 'navbar.html' %}
 
         {% block content %}
+        
         {% endblock %}
 
 
+
+
+
+        {% block scripts %}
         <script>
             function copy(ids) {
-            var textCopied = document.getElementById(ids);
-            text = textCopied.src;
-            var elementary = document.createElement('input');
-            document.body.appendChild(elementary);
-            elementary.setAttribute('value', text);
-            elementary.select();
-            document.execCommand('copy');
-            document.body.removeChild(elementary);
-            alert('Select this lick:' + textCopied.src);
+                var textCopied = document.getElementById(ids);
+                text = textCopied.src;
+                var elementary = document.createElement('input');
+                document.body.appendChild(elementary);
+                elementary.setAttribute('value', text);
+                elementary.select();
+                document.execCommand('copy');
+                document.body.removeChild(elementary);
+                alert('Select this link:' + textCopied.src);
         }
         function myFunction() {
-        var copyText = document.getElementById("link");
-        copyText.select();
-        document.execCommand("Copy");
-        alert("Copied the text: " + copyText.value);
+            var copyText = document.getElementById("link");
+            copyText.select();
+            document.execCommand("Copy");
+            alert("Copied the text: " + copyText.value);
         }
         </script>
 
@@ -51,7 +56,7 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    {% block scripts %}
+    
         <script src="{% static 'js/script.js' %}"></script>
     {% endblock %}
     </div>
