--- a/gallery/templates/location.html
+++ b/gallery/templates/location.html
@@ -62,7 +62,7 @@
         <div class="modal-body">
             <div class="row">
                 <div class="col-md-9 col-lg-9">
-                    <a href="{% url 'single' category_name=image.image_category.name image_id=image.id %}"><img src="{{image.pic_url}}" alt="" id="img{{image.id}}" class="img-thumbnail" style="cursor: pointer;"></a>
+                    <img src="{{image.pic_url}}" alt="" id="{{image.id}}" class="img-thumbnail" style="cursor: pointer;">
                 </div>
                 <div class="col-md-3">
                     <h4>Location</h4>
@@ -77,7 +77,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-warning" type="button" onclick="copy('img{{image.id}}')">Copy Link</button>
+            <button class="btn btn-warning" id="copy-btn" type="button" onclick="copy('{{image.id}}.url')">Copy Link</button>
             <button class="btn btn-warning" type="button" data-dismiss="modal">Close</button>
         </div>
     </div>
